# cuda-jit-ptx-test

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
csrc/: test.cu
data/: local.ptx
examples/: local_cuda.py  local_ptx.py  main.py  pytorch.py
include/: header_test.cuh
src/cuda_jit_ptx_test/: __init__.py  module.py  paths.py  pytorch.py
